kubernetes/addons/istio/kialli/ingress-iot.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kiali
  namespace: istio-system
  labels:
    name: kiali
spec:
  ingressClassName: ingress-nginx-class
  rules:
  - host: iotkiali.namutest.site
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: kiali
            port: 
              number: 20001
